Adding random CSS elements to the Lasgna.html page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagne</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="border">
     <h1>Lasagne</h1>
     <img src="../images/lasagne.jpeg" alt="Picture of a lasagne dish">
     <h2>Description</h2>
@@ -25,5 +27,6 @@
             <li>Combine cheese mixture</li>
             <li>Layer & bake</li>
         </ol>
+    </div>
 </body>
 </html>
